# Memorize-English-texts

./: README.md  flask_app.py  memo.md  pyproject.toml  requirements.txt  result_texts.py
docs/: CNAME
frontend/: uder_bar_to_input.py
make_blank/: high_level.py  middle_level.py
static/css/: styles.css
static/js/: app.js
templates/: index.html  main.html  result.html
