[tool.poetry]
name = "helping-english-text-memorization"
version = "0.1.0"
description = ""
authors = ["kty1004 <ktyoung1004@gmail.com>"]
readme = "README.md"
packages = [{include = "helping_english_text_memorization"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
